--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#FFFFFF</color>
-  <color name="colorPrimary">#0A84FF</color>
+  <color name="splashscreen_background">#0A84FF</color>
+  <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#0A84FF</color>
+  <color name="iconBackground">#0A84FF</color>
 </resources>
